--- a/reference/common/schemas/create-monitors-model.yaml
+++ b/reference/common/schemas/create-monitors-model.yaml
@@ -1,22 +1,30 @@
+title: CreateMonitorsModel
+required:
+- append_first_entry
+type: object
 properties:
-  emails:
-    default: []
-    items:
-      type: string
-    type: array
-    description: Adresy e-mail do wysyłki powiadomień z monitoringów
-    title: Emails
   filter_id:
+    title: Filter Id
+    type: string
     maxLength: 24
     minLength: 24
-    type: string
     description: Identyfikator filtra wykorzystanego do utworzenia monitoringu
-    title: Filter Id
-required:
-- filter_id
-type: object
+  emails:
+    title: Emails
+    type: array
+    items:
+      type: string
+    default: []
+    description: Adresy e-mail do wysyłki powiadomień z monitoringów
+  append_first_entry:
+    title: Append First Entry
+    type: boolean
+  send_empty_notifications:
+    title: Send Empty Notifications
+    type: boolean
+    default: false
 example:
+  filter_id: 3
   emails:
   - jajko@wp.pl
-  filter_id: 3
-title: CreateMonitorsModel
+  append_first_entry: true
