--- a/reference/common/schemas/update-filters-model.yaml
+++ b/reference/common/schemas/update-filters-model.yaml
@@ -1,6 +1,12 @@
+title: UpdateFiltersModel
 type: object
 properties:
+  name:
+    title: Name
+    type: string
+    description: Nazwa filtra
   content:
+    $ref: ../schemas.yaml#/StrictContentFiltersModel
     description: Zawartość filtra
     title: StrictContentFiltersModel
     additionalProperties: false
@@ -64,8 +70,3 @@ properties:
         type: array
         description: Imię i nazwisko
         title: Name
-  name:
-    type: string
-    description: Nazwa filtra
-    title: Name
-title: UpdateFiltersModel
