--- a/reference/common/schemas/notification-model.yaml
+++ b/reference/common/schemas/notification-model.yaml
@@ -1,10 +1,28 @@
+title: NotificationModel
 required:
+- id
 - sent_datetime
 - email
 - status
+- dispatch_id
+- monitor_id
 type: object
 properties:
+  id:
+    title: Id
+    type: string
+  sent_datetime:
+    title: Sent Datetime
+    type: string
+    format: date-time
+    description: Data wysyłki powiadomienia
+  email:
+    title: Email
+    type: string
+    description: Adres e-mail, na który wysłano powiadomienie
+    example: msig@bnf.pl
   status:
+    $ref: ../schemas.yaml#/NotificationStatusEnum
     enum:
     - 0
     - 1
@@ -19,14 +37,20 @@ properties:
         | `0` | Błąd wysyłki |
         | `1` | Wysłane |</details>
     title: NotificationStatusEnum
-  email:
-    description: Adres e-mail, na który wysłano powiadomienie
+  dispatch_id:
+    title: Dispatch Id
     type: string
-    example: msig@bnf.pl
-    title: Email
-  sent_datetime:
-    format: date-time
+  monitor_id:
+    title: Monitor Id
     type: string
-    description: Data wysyłki powiadomienia
-    title: Sent Datetime
-title: NotificationModel
+  error:
+    title: Error
+    type: string
+    nullable: true
+example:
+  id: 0
+  dispatch_id: 1
+  monitor_id: 1
+  sent_datetime: '2021-11-12T15:39:29.584Z'
+  email: abc@def.pl
+  status: 1
