--- a/reference/common/schemas/query-raport-by-date-range-model.yaml
+++ b/reference/common/schemas/query-raport-by-date-range-model.yaml
@@ -103,6 +103,7 @@ properties:
     title: Append First Entry
     type: boolean
     default: true
+additionalProperties: false
 example:
   custom_categories:
   - K
