--- a/reference/common/schemas/create-report-model.yaml
+++ b/reference/common/schemas/create-report-model.yaml
@@ -30,8 +30,126 @@ properties:
   query:
     title: Query
     anyOf:
-    - $ref: ../schemas.yaml#/QueryRaportByDateRangeModel
-    - $ref: ../schemas.yaml#/QueryRaportByNotificationModel
+    - title: QueryRaportByDateRangeModel
+      required:
+      - from_date
+      - to_date
+      type: object
+      properties:
+        custom_categories:
+          type: array
+          items:
+            enum:
+            - K
+            - K.0
+            - K.0.0
+            - K.0.1
+            - K.0.2
+            - K.0.3
+            - K.0.4
+            - K.0.5
+            - K.0.6
+            - K.0.7
+            - K.0.8
+            - K.0.9
+            - K.0.10
+            - K.1
+            - K.1.20
+            - K.1.21
+            - K.1.22
+            - K.1.23
+            - K.1.24
+            - K.1.25
+            - K.1.26
+            - K.1.27
+            - K.1.28
+            - K.1.29
+            - K.1.30
+            - K.1.31
+            - K.1.32
+            - K.1.33
+            - K.1.34
+            - K.2
+            - K.2.40
+            - K.2.41
+            - M
+            - M.0
+            - M.0.1
+            - M.0.2
+            - M.0.3
+            - M.0.4
+            - M.0.5
+            - M.0.6
+            - M.0.7
+            - M.0.8
+            - M.0.9
+            - M.1
+            - M.1.20
+            - M.1.21
+            - M.1.22
+            - M.1.23
+            - M.1.24
+            - M.1.25
+            - M.1.26
+            - M.1.27
+            - M.1.28
+            - M.1.29
+            - M.1.30
+            - M.1.31
+            - M.1.32
+            - M.1.33
+            - M.1.34
+            - M.1.35
+            - M.1.36
+            - M.1.37
+            - M.1.38
+            - M.1.39
+            - M.1.40
+            - M.1.41
+            - M.1.42
+            - M.1.43
+            - M.1.44
+            - M.1.45
+            - M.1.46
+            - M.1.47
+            - M.1.48
+            - M.1.49
+            - M.1.50
+            type: string
+            description: An enumeration.
+            title: CategoriesEnum
+          default: []
+        from_date:
+          title: From Date
+          type: string
+          format: date
+        to_date:
+          title: To Date
+          type: string
+          format: date
+        filter_id:
+          title: Filter Id
+          type: string
+          nullable: true
+        append_first_entry:
+          title: Append First Entry
+          type: boolean
+          default: true
+      example:
+        custom_categories:
+        - K
+        from_date: '2021-11-02'
+        to_date: '2021-11-04'
+        filter_id: 61ded2f8aff2de52365d891e
+        append_first_entry: true
+    - title: QueryRaportByNotificationModel
+      required:
+      - notification_id
+      type: object
+      properties:
+        notification_id:
+          title: Notification Id
+          type: string
     description: Identyfikatory kategorii ogłoszeń wybranych przez użytkownika
     required:
     - from_date
@@ -239,10 +357,19 @@ properties:
           | `4` | Json |
           | `5` | Def |</details>
     title: Format
+    enum:
+    - 1
+    - 2
+    - 3
+    - 4
+    - 5
+    type: integer
+    description: We numerate here each file format
   file_password:
     title: File Password
     type: string
     description: Hasło do pliku raportu
+additionalProperties: false
 example:
   type: 0
   name: example raport
