add error descriptions

--- a/reference/ins_api/paths/announcements-v2-announcements-GET.yaml
+++ b/reference/ins_api/paths/announcements-v2-announcements-GET.yaml
@@ -345,13 +345,6 @@ parameters:
     z parametrów usługi
 - required: false
   schema:
-    title: Filter Id
-    type: string
-  name: filter_id
-  in: query
-  description: Identyfikator filtra
-- required: false
-  schema:
     title: Append First Entry
     type: boolean
     default: false
@@ -380,25 +373,41 @@ responses:
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Bad Request
+          items:
+            $ref: '#/components/schemas/Error'
   '401':
     description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Unauthorized
+          items:
+            $ref: '#/components/schemas/Error'
   '403':
     description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Forbidden
+          items:
+            $ref: '#/components/schemas/Error'
   '429':
     description: Wykorzystany limit zapytań do API
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Too Many Requests
+          items:
+            $ref: '#/components/schemas/Error'
 description: |-
   Pobiera treść i wyodrębnione informacje z ogłoszeń tekstowych opublikowanych
   w wybranych rozdziałach MSiG / KRZ.
