--- a/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
+++ b/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
@@ -36,25 +36,41 @@ responses:
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Bad Request
+          items:
+            $ref: '#/components/schemas/Error'
   '401':
     description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Unauthorized
+          items:
+            $ref: '#/components/schemas/Error'
   '403':
     description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Forbidden
+          items:
+            $ref: '#/components/schemas/Error'
   '404':
     description: Nie znaleziono
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Not Found
+          items:
+            $ref: '#/components/schemas/Error'
 description: |-
   Pobiera plik wygenerowanego raportu o podanym `id`.
 
