--- a/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
+++ b/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
@@ -30,19 +30,31 @@ responses:
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Bad Request
+          items:
+            $ref: '#/components/schemas/Error'
   '401':
     description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Unauthorized
+          items:
+            $ref: '#/components/schemas/Error'
   '403':
     description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            details: Error Description
+            error: Forbidden
+          items:
+            $ref: '#/components/schemas/Error'
 description: |-
   Usuwa filtry o identyfikatorach przekazanych w kolejnych parametrach `ids`
   w query stringu.
