--- a/reference/common/schemas/params-model.yaml
+++ b/reference/common/schemas/params-model.yaml
@@ -4,8 +4,63 @@ properties:
       type: string
     title: Available Content
     type: array
-    example: asdasd
-    description: Lista identyfikatorów pól, które użytkownik może uwzględnić w raportach
+    description: |-
+      Lista identyfikatorów pól, które użytkownik może uwzględnić w raportach
+      <details>
+      <summary>Pokaż możliwe opcje</summary>
+
+      | Wartość | Nazwa |
+      |-|-|
+      | `entity.info.cleaned_name` | Nazwa podmiotu |
+      | `entity.info.first_name` | Imię |
+      | `entity.info.last_name` | Nazwisko |
+      | `entity.info.legal_form` | Forma prawna |
+      | `entity.info.ownership_type` | Forma własności |
+      | `entity.info.primary_business` | Przeważająca działalność gospodarcza (kod PKD) |
+      | `entity.info.commencement_date` | Data rozpoczęcia działalności |
+      | `entity.numbers.nip` | NIP |
+      | `entity.numbers.regon` | REGON |
+      | `entity.numbers.krs` | KRS |
+      | `entity.numbers.pesel` | PESEL |
+      | `entity.address.state` | Województwo |
+      | `entity.address.powiat` | Powiat |
+      | `entity.address.gmina` | Gmina |
+      | `entity.address.town` | Miejscowość |
+      | `entity.address.street` | Ulica |
+      | `entity.address.house_number` | Numer nieruchomości |
+      | `entity.address.flat_number` | Numer lokalu |
+      | `entity.address.zip_code` | Kod pocztowy |
+      | `entity.address.post_office` | Poczta |
+      | `proceeding.court_name` | Nazwa sądu |
+      | `proceeding.court_department` | Nazwa wydziału |
+      | `proceeding.signatures` | Sygnatura sprawy |
+      | `proceeding.commissioner_name` | Sędzia komisarz |
+      | `proceeding.commissioner_deputy_name` | Zastępca sędziego komisarza |
+      | `proceeding.administrator_name` | Nadzorca w postępowaniu |
+      | `proceeding.administrator_function` | Funkcja nadzorcy |
+      | `proceeding.administrator_licence_number` | Numer licencji doradcy restrukturyzacyjnego |
+      | `proceeding.administrator_address` | Adres nadzorcy (ulica) |
+      | `proceeding.administrator_zip_code` | Adres nadzorcy (kod pocztowy) |
+      | `proceeding.administrator_town` | Adres nadzorcy (miejscowość) |
+      | `proceeding.administrator_source_url` | Źródło danych nadzorcy |
+      | `order.order_date` | Data wydania postanowienia |
+      | `order.expiration_period` | Okres do działania (w dniach) |
+      | `order.expiration_date` | Koniec okresu do działania |
+      | `msig_entry.chapter` | Rozdział MSiG |
+      | `msig_entry.section` | Sekcja MSiG |
+      | `msig_entry.signature` | Sygnatura ogłoszenia w MSiG |
+      | `msig_entry.issue_date` | Data publikacji ogłoszenia w MSiG |
+      | `msig_entry.yearly_number` | Numer wydania MSiG |
+      | `msig_entry.position_number` | Numer pozycji MSiG |
+      | `msig_entry.url` | Link do ogłoszenia w serwisie imsig.pl |
+      | `krz_entry.chapter` | Rozdział KRZ |
+      | `krz_entry.section` | Sekcja KRZ |
+      | `krz_entry.signature` | Sygnatura ogłoszenia w KRZ |
+      | `krz_entry.issue_date` | Data publikacji ogłoszenia w KRZ |
+      | `krz_entry.url` | Link do ogłoszenia w serwisie KRZ |
+      | `content.text` | Treść ogłoszenia (tekst) |
+      | `content.html` | Treść ogłoszenia (HTML) |
+      | `content.url` | Link do podglądu treści ogłoszenia |</details>
   archival_reports_used:
     type: integer
     description: Liczba utworzonych raportów archiwalnych
